[gd_scene load_steps=6 format=3 uid="uid://dtcuemu2b1rcx"]

[ext_resource type="Script" path="res://game/daily_menu/DailyButton.gd" id="2_u6wd6"]
[ext_resource type="Texture2D" uid="uid://2on37y0kql6h" path="res://assets/images/ui/icons/streak_fire.png" id="3_h17m0"]
[ext_resource type="PackedScene" uid="uid://cwympyod5pu88" path="res://game/levelhub/OngoingSolution.tscn" id="3_jx7ca"]
[ext_resource type="Texture2D" uid="uid://c2ktoab6plfuo" path="res://assets/images/icons/share.png" id="3_ngoi4"]
[ext_resource type="Script" path="res://game/main_menu/ModulateTextureButton.gd" id="4_73s70"]

[node name="DailyButton" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 4
script = ExtResource("2_u6wd6")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1087.0
offset_bottom = 250.0
size_flags_horizontal = 8
mouse_filter = 2
theme_override_constants/separation = 52

[node name="VBoxContainer" type="VBoxContainer" parent="HBox"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="HBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="MainButton" type="Button" parent="HBox/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "DAILY_TOOLTIP"
focus_mode = 0
text = "DAILY_BUTTON"

[node name="OngoingSolution" parent="HBox/VBoxContainer/MarginContainer/MainButton" instance=ExtResource("3_jx7ca")]
unique_name_in_owner = true
z_index = 1
offset_left = -52.0
offset_top = 101.0
offset_right = 118.0
offset_bottom = 171.0

[node name="TimeBox" type="HBoxContainer" parent="HBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="TimeLeft" type="Label" parent="HBox/VBoxContainer/TimeBox"]
unique_name_in_owner = true
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
text = "X hours left"
vertical_alignment = 1

[node name="-" type="Label" parent="HBox/VBoxContainer/TimeBox"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
text = "-"
vertical_alignment = 1

[node name="StreakButton" type="Button" parent="HBox/VBoxContainer/TimeBox"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.85098, 1, 0.886275, 1)
theme_override_colors/font_pressed_color = Color(0.670588, 1, 0.819608, 1)
theme_override_colors/font_hover_color = Color(0.133333, 0.513726, 0.6, 1)
theme_override_colors/font_focus_color = Color(0.85098, 1, 0.886275, 1)
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_colors/icon_normal_color = Color(1, 0.611765, 0.415686, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.752941, 0.631373, 1)
theme_override_colors/icon_hover_color = Color(0.65098, 0.4, 0.27451, 1)
theme_override_colors/icon_focus_color = Color(1, 0.611765, 0.415686, 1)
theme_override_constants/outline_size = 40
theme_override_constants/icon_max_width = 100
theme_override_font_sizes/font_size = 90
text = "6"
icon = ExtResource("3_h17m0")
flat = true
alignment = 0
icon_alignment = 2

[node name="StreakContainer" type="GridContainer" parent="HBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "STREAK_TOOLTIP"
theme_override_constants/h_separation = 25
columns = 2

[node name="CurStreakLabel" type="Label" parent="HBox/VBoxContainer/StreakContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 60
text = "CUR_STREAK"
vertical_alignment = 1

[node name="CurStreak" type="Label" parent="HBox/VBoxContainer/StreakContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 60
text = "0"
vertical_alignment = 1

[node name="BestStreakLabel" type="Label" parent="HBox/VBoxContainer/StreakContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 60
text = "BEST_STREAK"
vertical_alignment = 1

[node name="BestStreak" type="Label" parent="HBox/VBoxContainer/StreakContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 60
text = "0"
vertical_alignment = 1

[node name="2Mistakes" type="Label" parent="HBox/VBoxContainer/StreakContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 40
text = "LESS_THREE_MISTAKES"
horizontal_alignment = 1

[node name="Completed" type="TextureButton" parent="HBox"]
unique_name_in_owner = true
visible = false
modulate = Color(0.670588, 1, 0.819608, 1)
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "DAILY_LEVEL_PLAYED_TOOLTIP"
texture_normal = ExtResource("3_ngoi4")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("4_73s70")

[node name="NotCompleted" type="Label" parent="HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
size_flags_vertical = 0
localize_numeral_system = false
tooltip_text = "DAILY_LEVEL_NOT_PLAYED_TOOLTIP"
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0.894118, 0.415686, 1)
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 75
theme_override_font_sizes/font_size = 140
text = " !"
vertical_alignment = 1

[node name="CopiedLabel" type="Label" parent="HBox"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
size_flags_vertical = 0
text = "COPIED"
vertical_alignment = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="mouse_entered" from="HBox/VBoxContainer/MarginContainer/MainButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="HBox/VBoxContainer/MarginContainer/MainButton" to="." method="_on_main_button_pressed"]
[connection signal="mouse_entered" from="HBox/Completed" to="HBox/Completed" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBox/Completed" to="HBox/Completed" method="_on_mouse_exited"]
[connection signal="pressed" from="HBox/Completed" to="." method="_on_share_pressed"]
[connection signal="timeout" from="Timer" to="." method="_update_time_left"]
