[gd_scene load_steps=12 format=3 uid="uid://crbw5uvchdcg6"]

[ext_resource type="Script" path="res://game/main_menu/MainMenu.gd" id="1_irufj"]
[ext_resource type="PackedScene" uid="uid://co5dajioxg1kf" path="res://game/mobile/MobileBGHelp.tscn" id="2_qxpit"]
[ext_resource type="Script" path="res://game/mobile/MobileBGHelp.gd" id="3_a8cxv"]
[ext_resource type="PackedScene" uid="uid://yacgiejcfdct" path="res://game/main_menu/Title.tscn" id="4_edxlj"]
[ext_resource type="Theme" uid="uid://cjvm0hkahhs31" path="res://assets/ui/MobileTheme.tres" id="5_sgldn"]
[ext_resource type="Texture2D" uid="uid://c5lle40115ifn" path="res://assets/images/ui/icons/double-fish.png" id="6_0mq4m"]
[ext_resource type="PackedScene" uid="uid://3tdi0fi37paw" path="res://game/levelhub/LevelHub.tscn" id="7_bx73v"]
[ext_resource type="Script" path="res://game/daily_menu/DailyButton.gd" id="8_i0ntq"]
[ext_resource type="PackedScene" uid="uid://cpwvkjj46nv4s" path="res://game/settings/SettingsScreenMobile.tscn" id="9_7nw1q"]
[ext_resource type="Texture2D" uid="uid://bbtgn25dlwt24" path="res://assets/images/ui/icons/checkmark.png" id="9_fra4p"]
[ext_resource type="PackedScene" uid="uid://d3tmba0xubh11" path="res://game/levelhub/OngoingSolution.tscn" id="10_4sssi"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_irufj")

[node name="MobileBGHelp" parent="." instance=ExtResource("2_qxpit")]
layout_mode = 0
script = ExtResource("3_a8cxv")

[node name="MobileBGHelp2" parent="." instance=ExtResource("2_qxpit")]
layout_mode = 0
offset_top = -1780.0
offset_bottom = -500.0
script = ExtResource("3_a8cxv")

[node name="Title" parent="." instance=ExtResource("4_edxlj")]
offset_left = -129.0
offset_top = 130.0
offset_right = -129.0
offset_bottom = 130.0
scale = Vector2(0.25, 0.25)

[node name="MainButtonsContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 480.0
offset_right = 720.0
offset_bottom = 930.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_sgldn")

[node name="VBoxContainer" type="VBoxContainer" parent="MainButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 65
alignment = 1

[node name="Play" type="Button" parent="MainButtonsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "PLAY_TOOLTIP"
focus_mode = 0
text = "PLAY_BUTTON"

[node name="RandomButton" type="Button" parent="MainButtonsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "RANDOM_TOOLTIP"
focus_mode = 0
text = "RANDOM_BUTTON"

[node name="EditorButton" type="Button" parent="MainButtonsContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "LEVEL_EDITOR_TOOLTIP"
focus_mode = 0
text = "LEVEL_EDITOR_BUTTON"

[node name="Workshop" type="Button" parent="MainButtonsContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "WORKSHOP_TOOLTIP"
focus_mode = 0
text = "WORKSHOP_BUTTON"

[node name="ExitButton" type="Button" parent="MainButtonsContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "EXIT_BUTTON"

[node name="InfoVBox" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 3027.0
offset_top = 1890.0
offset_right = 3789.0
offset_bottom = 2149.0
theme_override_constants/separation = 30

[node name="CreditsButton" type="Button" parent="InfoVBox"]
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
text = "CREDITS_BUTTON"

[node name="Version" type="Label" parent="InfoVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "VERSION"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ProfileButton" type="Button" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 13.0
offset_right = 618.0
offset_bottom = 613.0
scale = Vector2(0.2, 0.2)
tooltip_text = "PROFILE_TOOLTIP"
focus_mode = 0
icon = ExtResource("6_0mq4m")
icon_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 68.0
offset_top = -1740.0
offset_right = 184.0
offset_bottom = -1670.0
grow_horizontal = 0
grow_vertical = 2
focus_mode = 0
theme = ExtResource("5_sgldn")
text = "BACK"

[node name="LevelHub" parent="." instance=ExtResource("7_bx73v")]
layout_mode = 1
offset_top = -2360.0
offset_bottom = -2360.0
scale = Vector2(0.5, 0.5)

[node name="LevelSection1" parent="LevelHub/Sections" index="0"]
offset_left = 357.5
offset_top = 2137.5
offset_right = 317.5
offset_bottom = 2097.5

[node name="LevelSection2" parent="LevelHub/Sections" index="1"]
offset_left = 1250.0
offset_top = 2287.5
offset_right = 1210.0
offset_bottom = 2247.5

[node name="LevelSection3" parent="LevelHub/Sections" index="2"]
offset_left = 350.0
offset_top = 3012.5
offset_right = 310.0
offset_bottom = 2972.5

[node name="LevelSection4" parent="LevelHub/Sections" index="3"]
offset_left = 1222.5
offset_top = 3090.0
offset_right = 1182.5
offset_bottom = 3050.0

[node name="LevelSection5" parent="LevelHub/Sections" index="4"]
offset_left = 332.5
offset_top = 3925.0
offset_right = 292.5
offset_bottom = 3885.0

[node name="LevelSection6" parent="LevelHub/Sections" index="5"]
offset_left = 1270.0
offset_top = 3940.0
offset_right = 1230.0
offset_bottom = 3900.0

[node name="DailyButton" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 59.0
offset_top = 1108.0
offset_right = 59.0
offset_bottom = 1108.0
size_flags_horizontal = 4
theme = ExtResource("5_sgldn")
script = ExtResource("8_i0ntq")

[node name="HBox" type="HBoxContainer" parent="DailyButton"]
layout_mode = 0
offset_left = -49.0
offset_top = 19.0
offset_right = 598.0
offset_bottom = 153.0
size_flags_horizontal = 8
mouse_filter = 2
theme_override_constants/separation = 70

[node name="Completed" type="TextureRect" parent="DailyButton/HBox"]
unique_name_in_owner = true
modulate = Color(0.380392, 0.988235, 0.537255, 1)
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "DAILY_LEVEL_PLAYED_TOOLTIP"
texture = ExtResource("9_fra4p")
expand_mode = 1

[node name="NotCompleted" type="Label" parent="DailyButton/HBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
localize_numeral_system = false
tooltip_text = "DAILY_LEVEL_NOT_PLAYED_TOOLTIP"
mouse_filter = 1
theme_override_colors/font_color = Color(1, 0.894118, 0.415686, 1)
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 75
theme_override_font_sizes/font_size = 75
text = " !"

[node name="VBoxContainer" type="VBoxContainer" parent="DailyButton/HBox"]
layout_mode = 2
theme_override_constants/separation = 17
alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="DailyButton/HBox/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 33
alignment = 1

[node name="Button" type="Button" parent="DailyButton/HBox/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "DAILY_TOOLTIP"
focus_mode = 0
text = "DAILY_BUTTON"

[node name="OngoingSolution" parent="DailyButton/HBox/VBoxContainer/VBoxContainer/Button" instance=ExtResource("10_4sssi")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 70)
offset_left = -52.0
offset_top = 54.0
offset_right = 118.0
offset_bottom = 124.0
scale = Vector2(0.7, 0.7)

[node name="Spacer" type="Control" parent="DailyButton/HBox/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StreakContainer" type="VBoxContainer" parent="DailyButton/HBox/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "STREAK_TOOLTIP"
theme_override_constants/separation = 15

[node name="TimeLeft" type="Label" parent="DailyButton/HBox/VBoxContainer/VBoxContainer/StreakContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
text = "X hours left"
vertical_alignment = 1

[node name="CurStreak" type="Label" parent="DailyButton/HBox/VBoxContainer/VBoxContainer/StreakContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 26
text = "CUR_STREAK"
vertical_alignment = 1

[node name="BestStreak" type="Label" parent="DailyButton/HBox/VBoxContainer/VBoxContainer/StreakContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0.0352941, 0.141176, 1)
theme_override_constants/outline_size = 40
theme_override_font_sizes/font_size = 26
text = "BEST_STREAK"
vertical_alignment = 1

[node name="Timer" type="Timer" parent="DailyButton"]
wait_time = 30.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(360, 2040)
zoom = Vector2(1.65, 1.65)
position_smoothing_enabled = true
position_smoothing_speed = 4.0
editor_draw_limits = true

[node name="SettingsScreen" parent="." instance=ExtResource("9_7nw1q")]

[connection signal="mouse_entered" from="MainButtonsContainer/VBoxContainer/Play" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainButtonsContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainButtonsContainer/VBoxContainer/RandomButton" to="." method="_on_random_button_pressed"]
[connection signal="mouse_entered" from="MainButtonsContainer/VBoxContainer/EditorButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainButtonsContainer/VBoxContainer/EditorButton" to="." method="_on_editor_button_pressed"]
[connection signal="mouse_entered" from="MainButtonsContainer/VBoxContainer/Workshop" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainButtonsContainer/VBoxContainer/Workshop" to="." method="_on_workshop_pressed"]
[connection signal="mouse_entered" from="MainButtonsContainer/VBoxContainer/ExitButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="MainButtonsContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="InfoVBox/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="ProfileButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="ProfileButton" to="." method="_on_profile_button_pressed"]
[connection signal="mouse_entered" from="BackButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="disable_focus" from="LevelHub" to="." method="_on_level_hub_disable_focus"]
[connection signal="enable_focus" from="LevelHub" to="." method="_on_level_hub_enable_focus"]
[connection signal="pressed" from="DailyButton/HBox/VBoxContainer/VBoxContainer/Button" to="DailyButton" method="_on_button_pressed"]
[connection signal="timeout" from="DailyButton/Timer" to="DailyButton/HBox" method="_on_timer_timeout"]

[editable path="LevelHub"]
[editable path="LevelHub/Sections/LevelSection1"]
[editable path="LevelHub/Sections/LevelSection1/Levels/LevelButton1"]
[editable path="LevelHub/Sections/LevelSection2"]
[editable path="LevelHub/Sections/LevelSection2/Levels/LevelButton1"]
[editable path="LevelHub/Sections/LevelSection3"]
[editable path="LevelHub/Sections/LevelSection3/Levels/LevelButton1"]
[editable path="LevelHub/Sections/LevelSection4"]
[editable path="LevelHub/Sections/LevelSection4/Levels/LevelButton1"]
[editable path="LevelHub/Sections/LevelSection5"]
[editable path="LevelHub/Sections/LevelSection5/Levels/LevelButton1"]
[editable path="LevelHub/Sections/LevelSection6"]
[editable path="LevelHub/Sections/LevelSection6/Levels/LevelButton1"]
